--- a/WOTR_PATH_OF_HELL.csproj
+++ b/WOTR_PATH_OF_HELL.csproj
@@ -134,30 +134,11 @@
     <Compile Include="BlueprintCore\Utils\LocalizationTool.cs" />
     <Compile Include="BlueprintCore\Utils\MatchContext.cs" />
     <Compile Include="BlueprintCore\Utils\MatchExtensions.cs" />
-    <Compile Include="BlueprintPatches\DLC3_BludgeoningWeaponsLevelBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_BonusAttackDamageBowsBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_DwarvenBlessingFeature.cs" />
-    <Compile Include="BlueprintPatches\DLC3_ElementalDamageAcidBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_ElementalDamageColdBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_ElementalDamageElectricityBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_ElementalDamageFireBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_ElementalDamageSonicBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_ElvenBlessingBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_ExoticWeaponBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_RoguesRangersGainDRBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_SlasingWeaponsLevelBuff.cs" />
-    <Compile Include="BlueprintPatches\DLC3_UnramedAttacksBuff.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="BlueprintPatches\DLC3_BarbarianBloodragerHPBuffFeature.cs" />
     <Compile Include="BlueprintPatches\DLC3_ArmorPenaltyReduceBuff.cs" />
-    <Compile Include="MechanicsChanges\InjectStuffOnLoad.cs" />
-    <Compile Include="Other\ApplyBoon.cs" />
-    <Compile Include="Other\BBB_Cheats.cs" />
-    <Compile Include="Other\DeadIsDead.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\Settings.cs" />
-    <Compile Include="Settings\TrainingPartnerList.cs" />
     <Compile Include="Utilities\ObjectDeepCopier.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
@@ -172,6 +153,8 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="MechanicsChanges\" />
+    <Folder Include="Other\" />
     <Folder Include="Strings\" />
   </ItemGroup>
   <ItemGroup>
