--- a/WOTR_PATH_OF_HELL.csproj
+++ b/WOTR_PATH_OF_HELL.csproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Output\Assets\Settings\pathofhell.png" />
+    <Content Include="pathofhellmenu.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="Publicise" AfterTargets="Clean">
